# kusumi-mqttmtd

./: .gitignore  README.md  mqtt_research.code-workspace
.crossnote/: style.less
certcreate/: .gitignore  gen_ca.sh  gen_client.sh  gen_conf.sh  gen_server.sh  generate_certs.sh
certcreate/conf/: ca.conf  client_template_nouuid.conf  client_template_uuid.conf  server_template.conf
certs/ca/: ca.key  ca.pem  ca.srl
database/: docker-compose.yml
database/db/: Dockerfile  sqlite.db
database/grafana/: grafana.ini
database/mosquitto/: mosquitto.conf
database/python-service/: Dockerfile  app.py
docker/: Dockerfile.client  Dockerfile.server  server_start.sh
esp32/esp32-tokenmgr/: .gitignore  CMakeLists.txt  sdkconfig
esp32/esp32-tokenmgr_demo/components/tokenmgr/: CMakeLists.txt  logger.c  tokenmgr.c.old
esp32/esp32-tokenmgr_demo/components/tokenmgr/test/: CMakeLists.txt  test_tokenmgr.c.old
go/: go.work  go.work.sum
go/authserver/: authserver.go  go.mod
go/client/: client.go  (+1 more)
logs/: log.esp32-tokenmgr.20240831154756.txt  network_visualizer.py  power_visualizer.py  server_time_getter.py  sqlite.db  start_time_getter.py  time_table.txt  time_visualizer.py  visualize.sh
mosquitto_config/: acl.acl  dhparam.pem  mosquitto-tls.conf  mosquitto-tls_macos.conf  mosquitto.conf
mqttmtd_config/: acl.yml  client_conf_template.yml  server_conf_docker.yml  server_conf_nondocker_template.yml
shell/: generate_certs_for_docker  generate_client_cert  run_client  run_server  run_server_macos  stop_client  tty_client  tty_server
wattlogger/: wattlogger.ino
(+67 files in other folders)
